force-app/main/default/objects/custom_create344__c/custom_create344__c.object-meta.xml
<CustomObject>
    <label>Custom created object344</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects344</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>