force-app/main/default/objects/custom_create344__c/fields/custom_create_344field544__c.field-meta.xml
<CustomField>
    <fullName>custom_create_344field544__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 344field544</label>
    <type>Checkbox</type>
</CustomField>